<resources>
    <string name="app_name">SaySco</string>
    <string name="light_bulb">Light bulb and book image</string>
    <string name="welcome">Welcome to SaySco</string>
    <string name="welcome_desc">Essay grading is precise and easy. Our essay grading feature has been thoroughly researched and tested to ensure that it is of the highest quality and ready to help you.</string>
    <string name="start_btn">Get Started</string>
    <string name="title_login">Hi! Welcome Back</string>
    <string name="subtitle_login">Good to see you again! To access your account, please log in first.</string>
    <string name="email_icon">Icon email</string>
    <string name="hint_pw">Password</string>
    <string name="hint_email">Email</string>
    <string name="signin_label">Sign in</string>
    <string name="go_to_signup">Don’t have an account?</string>
    <string name="signup_label">Sign up</string>
    <string name="pw_error">Password must not be less than 8 characters</string>
    <string name="email_error">Enter the appropriate email</string>
    <string name="not_match">Your email is incorrect or your password is less than 8 characters!</string>
    <string name="empty_ed">Please fill in all input!</string>
    <string name="title_register">Sign up to SaySco</string>
    <string name="subtitle_register">"Register now to experience the revolutionary experience of automatically grading essays. "</string>
    <string name="hint_name">Username</string>
    <string name="go_to_signin">Already have an account?</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="greeting">Welcome,</string>
    <string name="greetinghand">👋</string>
    <string name="greeting_desc">Save your time to speed up your work!</string>
    <string name="btn_title_essay_scoring">Essay Scoring</string>
    <string name="btn_desc_essay_scoring">Let\'s try it now</string>
    <string name="new_essay_desc">Please insert essay question and answer key</string>
    <string name="new_essay_title">Essay Question</string>
    <string name="answerkey_essay">Answer Key</string>
    <string name="question_essay">Essay Question</string>
    <string name="btn_save_and_continue"><![CDATA[Save & Continue]]></string>
    <string name="btn_update">Update and Continue</string>
    <string name="notif_saved">Successfully saved</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_question">This is a essay</string>
    <string name="title_answer">Answer :</string>
    <string name="title_page_student_answer">List Student Answer</string>
    <string name="desc_page_student_answer">Please enter the students answers for the essay scoring</string>
    <string name="no_keyword">No keyword</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registration_error">Registration failed!</string>
    <string name="login_error">Login failed!</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="no_student_answer_data_please_add">There is no student answer, please enter the student answer first.</string>
    <string name="add_answer">Add Answer</string>
    <string name="add_student_answer_first">Add Student Answer First</string>
    <string name="student_number">Student Number</string>
    <string name="student_name">Student Name</string>
    <string name="student_answer">Student Answer</string>
    <string name="edit_answer">Edit Answer</string>
    <string name="confirm">Confirm</string>
    <string name="saved_successfully">Saved Successfully!</string>
    <string name="message_result">Congratulations your essay was successfully saved, to see your essay results can be accessed by clicking the button below.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="avatar">User\'s avatar</string>
    <string name="default_uname">John Doe</string>
    <string name="default_email">john.doe@example.com</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="answer">"Answers : "</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
</resources>