<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:paddingHorizontal="30dp"
    android:paddingVertical="40dp">
    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textSize="27sp"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/subtitle_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:text="@string/subtitle_register"
        android:textColor="@color/gray_light"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/title_login"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subtitle_login"
        app:layout_constraintBottom_toTopOf="@id/liner_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconContentDescription="@string/email_icon"
            app:layout_constraintBottom_toTopOf="@id/ed_email_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/hint_name"
                android:inputType="textEmailAddress"
                android:textSize="17sp"
                android:fontFamily="@font/roboto_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconContentDescription="@string/email_icon"
            app:layout_constraintBottom_toTopOf="@id/ed_name_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.example.saysco.ui.customView.CustomETEmail
                android:id="@+id/ed_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="17sp"
                android:fontFamily="@font/roboto_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_pw_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconContentDescription="@string/email_icon"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_email_layout">
            <com.example.saysco.ui.customView.CustomETPassword
                android:id="@+id/ed_pw"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/hint_pw"
                android:inputType="textPassword"
                android:textSize="17sp"
                android:fontFamily="@font/roboto_medium"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingHorizontal="60dp"
            android:paddingVertical="15dp"
            android:text="@string/signup_label"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_bold"
            android:backgroundTint="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_pw_layout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/liner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_signin"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/go_to_signin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/signin_label"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/blue"
            android:textSize="18sp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>