<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.on_boarding.OnBoardingActivity"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/welcome_btn">
        <ImageView
            android:id="@+id/welcome_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/light_bulb"
            android:contentDescription="@string/light_bulb"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_black"
            app:layout_constraintTop_toBottomOf="@+id/welcome_img"/>
        <TextView
            android:id="@+id/welcome_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:textSize="17sp"
            android:text="@string/welcome_desc"
            android:textColor="@color/gray_light"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toBottomOf="@id/welcome_txt"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/welcome_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="60dp"
        android:paddingVertical="15dp"
        android:text="@string/start_btn"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_bold"
        android:backgroundTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>