<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp"
tools:context=".ui.addNewEssay.studentAnswer.listStudentAnswer.ListStudentAnswerActivity">

<TextView
    android:id="@+id/title_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title_page_student_answer"
    android:textColor="@color/black_second"
    android:textSize="28sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/desc_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/desc_page_student_answer"
    android:textColor="@color/gray_light"
    android:layout_marginTop="8dp"
    android:textSize="16sp"
    android:textStyle="normal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/title_page" />

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="3"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="invisible"
        android:textColor="@color/gray_light"
        android:text="@string/no_student_answer_data_please_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_page"/>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rc_student_answer"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="16dp"
    tools:listitem="@layout/item_student_answer_edit"
    app:layout_constraintBottom_toTopOf="@id/saveButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/desc_page" />

<ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/addStudentAnswerButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="32dp"
    app:layout_constraintBottom_toTopOf="@+id/saveButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:srcCompat="@android:drawable/ic_input_add"
    android:contentDescription="@string/add_answer" />

<Button
    android:id="@+id/saveButton"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_marginTop="24dp"
    android:backgroundTint="@color/blue"
    android:text="@string/btn_save_and_continue"
    android:clickable="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:cornerRadius="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>