<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        tools:context=".ui.addNewEssay.AddEssayActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/new_essay_title"
                    android:textColor="@color/black_second"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/new_essay_desc"
                    android:textColor="@color/gray_light"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    android:gravity="start|center_horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_essay"
                        android:textColor="@color/gray_dark"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold|normal"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ed_questionessay_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_questionessay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/question_essay"
                            android:textColor="@color/black_second"
                            android:ems="10"
                            android:inputType="textMultiLine"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    android:gravity="start|center_horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerkey_essay"
                        android:textColor="@color/gray_dark"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold|normal"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ed_answerkeyessay_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_ed_answerkeyessay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black_second"
                            android:ems="10"
                            android:hint="@string/answerkey_essay"
                            android:inputType="textMultiLine"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/btn_save_and_continue"
                    app:cornerRadius="24dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>